# HiAI-Foundation

./: 0copy.cpp  0copy.md  NPU_functionality_FAQ.md  NPU_performance_guide.md  build.gradle  gradle.properties  gradlew.bat  local.properties
IRBuild/: CMakeLists.txt  README.en.md  README.md  build.sh  clear.sh  push_run.sh
IRBuild/data/: sqrt_ir.om
IRBuild/ddk/ai_ddk_lib/include/graph/compatible/: cpt_nn_defs.h
IRBuild/jni/: Android.mk  Application.mk  test_single_op.cpp
IRBuild/jni/adapter/: adapter.h  graph_adapter.cc  op_adapter.cc  tensor_adapter.cc
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/huawei/hiaidemo/adapter/: ClassifyAdapter.java
app/src/main/java/com/huawei/hiaidemo/bean/: ClassifyItemModel.java  ModelInfo.java
app/src/main/java/com/huawei/hiaidemo/utils/: Constant.java  ModelManager.java  ModelManagerListener.java  Untils.java
app/src/main/java/com/huawei/hiaidemo/view/: AsyncClassifyActivity.java  CustomToast.java  MainActivity.java  NpuClassifyActivity.java  SyncClassifyActivity.java
app/src/main/jni/: buildmodel.cpp  classify_async_jni.cpp  classify_sync_jni.cpp
app/src/main/res/drawable/: btn_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_npu_classify.xml  classify_item.xml  classify_layout.xml  recyclerview_hewader.xml
app/src/main/res/values/: strings.xml  styles.xml
